<?xml version="1.0" encoding="utf-8"?>
<!-- View Title Label -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_screen_"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="22dip"
            android:text="@string/lbl_loginName"
            android:textColor="#fff" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserName"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/loginEmail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:ems="8" android:hint="User Name"
            android:background="#EEEEEE" >

            <requestFocus />
        </EditText>
        <!-- Password Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/lbl_btn_password"
            android:textColor="#fff" />
        <EditText
            android:id="@+id/loginPassword"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_above="@+id/loginEmail"
            android:layout_alignParentLeft="true"
            android:ems="8"
            android:password="true"
            android:hint="Password"
            android:background="#EEEEEE" />

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me" />

        <TextView
            android:id="@+id/login_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLogin"
            android:layout_alignParentLeft="true"
            android:textColor="#ff0000"
            android:textStyle="bold" />
	    <Button
	        android:id="@+id/btnLogin"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/btnLinkToRegisterScreen"
	        android:layout_alignParentLeft="true"
	        android:background="#f04389"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:text="@string/btn_login" />
	    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="10dip"
            android:text="@string/lbl_create_account"
            android:textColor="#fff" />
	    <!-- Link to Registration Screen -->
	    <Button
	        android:id="@+id/btnLinkToRegisterScreen"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/btnLinkToRegisterScreen"
	        android:layout_alignParentLeft="true"
	        android:background="#999999"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:text="@string/btn_register" />

	    </LinearLayout>
	    <ImageView
	        android:id="@+id/icon1"
	        android:layout_width="64dp"
	        android:layout_height="64dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:src="@drawable/ic_launcher" />

</RelativeLayout>